--- a/build.gradle
+++ b/build.gradle
@@ -21,11 +21,27 @@ repositories {
 	mavenCentral()
 }
 
+dependencyManagement {
+  imports {
+    mavenBom 'org.apache.logging.log4j:log4j-bom:2.20.0'
+  }
+}
+configurations.implementation {
+     exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'  
+}
+
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
+	implementation 'org.springframework:spring-web'
+	implementation 'org.springframework.data:spring-data-jpa'
 	implementation 'org.flywaydb:flyway-core'
+	implementation 'org.apache.logging.log4j:log4j-api'
+	
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
+    runtimeOnly 'org.apache.logging.log4j:log4j-core'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
