[CICD] Testing pipeline

--- a/build.gradle
+++ b/build.gradle
@@ -66,5 +66,10 @@ publishing {
             }
         }
     }
+    publications {
+        create<MavenPublication>("default") {
+            from(components["java"])
+        }
+    }
 }
 
