[CICD] Publishing boot jar

--- a/build.gradle
+++ b/build.gradle
@@ -67,8 +67,8 @@ publishing {
         }
     }
     publications {
-        maven(MavenPublication) {
-            from components.java
+        mavenJava(MavenPublication) {
+            artifact bootJar
         }
     }
 }
