--- a/build.gradle
+++ b/build.gradle
@@ -62,7 +62,7 @@ publishing {
             url = uri("https://maven.pkg.github.com/dampudia/picowh-manager")
             credentials {
                 username = System.getenv("GITHUB_ACTOR")
-                password = System.getenv("GITHUB_TOKEN")
+                password = System.getenv("PUBLISH_TOKEN")
             }
         }
     }
