[CICD] More tests

--- a/.github/workflows/github-actions-build.yml
+++ b/.github/workflows/github-actions-build.yml
@@ -20,6 +20,6 @@ jobs:
       run: ./gradlew build
     - name: Publish package
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        PUBLISH_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
       run: ./gradlew publish
       
